# robotx_gazebo

./: .gitignore  .gitmodules  README.md  dependencies_commin.sh  dependencies_common.sh  environment.sh  tuat
catkin_ws/src/vmrc/: .hgtags
catkin_ws/src/vmrc/robotx_gazebo/: CMakeLists.txt  how_to_run_waypoint_nav.md  package.xml
catkin_ws/src/vmrc/robotx_gazebo/include/robotx_gazebo/: light_buoy_controller.hh
catkin_ws/src/vmrc/robotx_gazebo/launch/: bamboolake_bionic (copy).launch  bamboolake_bionic.launch  bamboolake_duckieboat.launch  sandisland.launch  sandisland_nctu.launch
catkin_ws/src/vmrc/robotx_gazebo/models/apriltag/: apriltag.xacro  model (another copy).sdf  model (copy).sdf  model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/black_buoy/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/blue_buoy/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/blue_circle_dock/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/blue_circle_dock/meshes/: dock_gate_blue_circle.dae
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_A3/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_A3/meshes/: a3.dae  a3_base.dae  buoy_a3_com.dae
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_A5/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_A5/meshes/: buoy_a5_com.dae
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_A7/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_A7/meshes/: a7.dae  green_buoy.dae
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_a3/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_a5/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_a5/meshes/: a5.dae
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_a7/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/buoy_a7/meshes/: buoy_a7.dae  buoy_a7_com.dae
catkin_ws/src/vmrc/robotx_gazebo/models/dd_deliver/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dd_deliver/mesh/: detect_deliver.STL
catkin_ws/src/vmrc/robotx_gazebo/models/dd_dock_deliever/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dd_docking/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dd_docking/mesh/: docking.STL
catkin_ws/src/vmrc/robotx_gazebo/models/deliever_buoy/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/deliever_buoy/meshes/: detect_and_deliever.dae
catkin_ws/src/vmrc/robotx_gazebo/models/dock_2018/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dock_block/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dock_block_2x2/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dock_block_3x3/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dock_block_4x4/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dock_circle/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dock_circle/meshes/: dock_circle_blue.dae  dock_circle_green.dae  dock_circle_red.dae
catkin_ws/src/vmrc/robotx_gazebo/models/dock_cross/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dock_cross/meshes/: dock_cross_blue.dae  dock_cross_green.dae  dock_cross_red.dae
catkin_ws/src/vmrc/robotx_gazebo/models/dock_triangle/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/dock_triangle/meshes/: dock_triangle_blue.dae  dock_triangle_green.dae  dock_triangle_red.dae
catkin_ws/src/vmrc/robotx_gazebo/models/green_buoy/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/green_triangle_dock/meshes/: dock_gate_green_triangle.dae
catkin_ws/src/vmrc/robotx_gazebo/models/light_buoy/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/red_buoy/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/red_cross_dock/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/robotx_light_buoy_new/: model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/three_docks_v1/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/three_docks_v2/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/white_buoy/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/yellow_buoy/: model.config  model.sdf
catkin_ws/src/vmrc/robotx_gazebo/models/zed/: zed_model.blend  zed_model.dae
catkin_ws/src/vmrc/robotx_gazebo/msg/: ObstaclePoseList.msg  Wp_nav_state.msg
catkin_ws/src/vmrc/robotx_gazebo/scripts/: Circling_PID_controller.py  PID.py  PID_cascade.py  WAMV_PID_controller.py  clustering.cpp  drive_command.py  hole_detection.py  twist2drive_diff.py  wamv_model_path.py
catkin_ws/src/vmrc/robotx_gazebo/src/: BlinkVisualPlugin.cc  light_buoy_controller.cc  trajectory.py  usv_gazebo_thrust_plugin.cc
catkin_ws/src/vmrc/robotx_gazebo/srv/: waypoint.srv
catkin_ws/src/vmrc/robotx_gazebo/urdf/: duckieboat_gazebo_camera_plugin.xacro  wamv_gazebo_apriltags_plugin.xacro  wamv_gazebo_dynamics_plugin.xacro  wamv_gazebo_front_camera_plugin.xacro  wamv_gazebo_front_stereo_camera_plugin.xacro  wamv_gazebo_gps_plugin.xacro  wamv_gazebo_imu_plugin.xacro  wamv_gazebo_lidar_plugin.xacro  wamv_gazebo_p3d_plugin.xacro  wamv_gazebo_wind_plugin.xacro  watchtower_gazebo_camera_plugin.xacro
catkin_ws/src/vmrc/robotx_gazebo/worlds/: bamboolake_bionic.world  hello.world  robotx_challenge_course.world  robotx_competition_course.world  sandisland.world  sandisland_all_model.world  sandisland_all_models.world  sandisland_buoys.world  sandisland_docking.world  sandisland_gym.world  sandisland_scan_the_code.world  sandisland_task.world  sandisland_task1.world  sandisland_task2.world  sandisland_task4.world  sandisland_task5.world  sandisland_task5_new.world  sandisland_task6.world  sandisland_task67.world  sandisland_task7.world  sandisland_test.world  semi_final.world
(+205 files in other folders)
